Fix flickering that occurs when closing a modal window

--- a/src/components/ModalOptions/index.scss
+++ b/src/components/ModalOptions/index.scss
@@ -68,7 +68,7 @@
 
 .animationOut {
   animation-name: animationOut;
-  animation-duration: 0.5s;
+  animation-duration: 0.8s;
   @keyframes animationOut {
     0% {
       opacity: 1;
@@ -81,7 +81,7 @@
 
 .animationIn {
   animation-name: animationIn;
-  animation-duration: 0.5s;
+  animation-duration: 0.8s;
   @keyframes animationIn {
     0% {
       opacity: 0;
